--- a/package.json
+++ b/package.json
@@ -9,34 +9,34 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "14.0.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.3.3",
+    "@fullcalendar/core": "6.1.10",
+    "@fullcalendar/daygrid": "6.1.10",
+    "@fullcalendar/interaction": "6.1.10",
+    "@fullcalendar/react": "6.1.10",
     "@types/node": "20.10.4",
     "@types/react": "18.2.45",
     "@types/react-dom": "18.2.18",
-    "express": "4.18.2",
-    "multer": "1.4.5",
-    "cors": "2.8.5",
-    "pdf-parse": "1.1.1",
-    "openai": "4.24.1",
-    "@fullcalendar/core": "6.1.10",
-    "@fullcalendar/daygrid": "6.1.10",
-    "@fullcalendar/react": "6.1.10",
-    "@fullcalendar/interaction": "6.1.10",
-    "date-fns": "2.30.0",
-    "lucide-react": "0.263.1",
-    "tailwindcss": "3.3.6",
     "autoprefixer": "10.4.16",
-    "postcss": "8.4.32"
+    "cors": "2.8.5",
+    "date-fns": "2.30.0",
+    "express": "4.18.2",
+    "lucide-react": "0.263.1",
+    "multer": "^2.0.2",
+    "next": "14.0.4",
+    "openai": "4.24.1",
+    "pdf-parse": "1.1.1",
+    "postcss": "8.4.32",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.3.6",
+    "typescript": "5.3.3"
   },
   "devDependencies": {
+    "@types/cors": "2.8.17",
     "@types/express": "4.17.21",
     "@types/multer": "1.4.11",
-    "@types/cors": "2.8.17",
     "@types/pdf-parse": "1.1.4",
-    "tsx": "4.6.2",
-    "concurrently": "8.2.2"
+    "concurrently": "8.2.2",
+    "tsx": "4.6.2"
   }
 }
