--- a/package.json
+++ b/package.json
@@ -3,25 +3,27 @@
   "version": "1.0.0",
   "description": "Convert law school syllabi into interactive calendars",
   "scripts": {
-    "dev": "concurrently \"next dev\" \"tsx watch api/server.ts\"",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "lint": "next lint"
   },
   "dependencies": {
     "@fullcalendar/core": "6.1.10",
     "@fullcalendar/daygrid": "6.1.10",
     "@fullcalendar/interaction": "6.1.10",
     "@fullcalendar/react": "6.1.10",
+    "@types/formidable": "^3.4.5",
     "@types/node": "20.10.4",
     "@types/react": "18.2.45",
     "@types/react-dom": "18.2.18",
     "autoprefixer": "10.4.16",
-    "cors": "2.8.5",
     "date-fns": "2.30.0",
-    "express": "4.18.2",
+    "formidable": "^3.5.4",
+    "google-auth-library": "^10.3.0",
+    "googleapis": "^159.0.0",
     "lucide-react": "0.263.1",
-    "multer": "^2.0.2",
     "next": "14.0.4",
     "openai": "4.24.1",
     "pdf-parse": "1.1.1",
@@ -32,11 +34,6 @@
     "typescript": "5.3.3"
   },
   "devDependencies": {
-    "@types/cors": "2.8.17",
-    "@types/express": "4.17.21",
-    "@types/multer": "1.4.11",
-    "@types/pdf-parse": "1.1.4",
-    "concurrently": "8.2.2",
-    "tsx": "4.6.2"
+    "@types/pdf-parse": "1.1.4"
   }
 }
